--- a/galleryc.html
+++ b/galleryc.html
@@ -7,10 +7,14 @@
     <meta charset="utf-8">
     <link href="styles/gallery.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
-    <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
-        media="screen" />
+  
             <script src="scripts/global.js" type="text/javascript"></script>
+            <script>
+            	$(function()
+            	{
+            		parent.prepFancyBox();
+            	});
+            </script>
 
 </head>
 <body>
@@ -31,16 +35,16 @@
                             <div >
                             דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
                             </div>
-							<a href="images/gallery/g2-5.jpg">
+							<a href="images/gallery/g2-5.jpg"  class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img2-5"  class="galleryimage" src="images/gallery/preview/g2-5.jpg" />
                             </a>
-                            <a href="images/gallery/g2-1.jpg">
+                            <a href="images/gallery/g2-1.jpg" class="fancybox fancybox.iframe">
                                 <img alt="preview image" id="Img1"  class="galleryimage" src="images/gallery/preview/g2-1.jpg" />
-                            </a><a href="images/gallery/g2-2.jpg">  
+                            </a><a href="images/gallery/g2-2.jpg" class="fancybox fancybox.iframe">  
                                 <img alt="preview image" id="Img10"  class="galleryimage" src="images/gallery/preview/g2-2.jpg" />
-                            </a><a href="images/gallery/g2-3.jpg">                                          
+                            </a><a href="images/gallery/g2-3.jpg" class="fancybox fancybox.iframe">                                          
                                 <img alt="preview image" id="Img11"  class="galleryimage" src="images/gallery/preview/g2-3.jpg" />
-                            </a><a href="images/gallery/g2-4.jpg">                                           
+                            </a><a href="images/gallery/g2-4.jpg" class="fancybox fancybox.iframe">                                           
                                 <img alt="preview image" id="Img12"  class="galleryimage" src="images/gallery/preview/g2-4.jpg" />
                             </a>
                             <div class="imgtitle">
@@ -268,13 +272,5 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript">
-
-        $(document).ready(function () {
-            $('.gallery a').fancybox();
-        });
-
-    </script>
-   
 </body>
 </html>
