--- a/master.html
+++ b/master.html
@@ -13,6 +13,9 @@
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="scripts/global.js" type="text/javascript"></script>
     <link rel="shortcut icon" href="images/favicon.ico">
+      <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
+    <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
+        media="screen" />
 
 </head>
 <body id="mainBody">
@@ -55,5 +58,13 @@
     <footer>
        Powered by lemon juice
     </footer>
+    
+    <script>
+   function prepFancyBox()
+    {
+            $('#iframe').contents().find(".gallery,a").fancybox({type:"iframe"});
+    }
+    </script>
+    
 </body>
 </html>
