--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" id="mainHtml">
 <head>
     <title>Zohar Agmon's Gallery</title>
     <meta charset="utf-8">
@@ -12,19 +12,23 @@
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="scripts/global.js" type="text/javascript"></script>
+    <link rel="shortcut icon" href="images/favicon.ico">
+      <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
+    <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
+        media="screen" />
 
 </head>
-<body>
+<body id="mainBody">
     <div id="fb-root">
     </div>
     <div id="menu">
    
         <ul class="scroller_anchor">
-            <li><a href="index.html">ברוכים הבאים</a></li>
-            <li><a href="gallery.html">גלריה</a></li>
-            <li><a href="order.html" id="order">הזמנת ציור</a></li>
-            <li><a href="contact.html">צור קשר</a></li>
-            <li><a href="faq.html">שאלות נפוצות</a></li>
+            <li><a href="indexc.html" target="iframe" onclick="clearHeight();">ברוכים הבאים</a></li>
+            <li><a href="galleryc.html" target="iframe" onclick="clearHeight();">גלריה</a></li>
+            <li><a href="orderc.html" id="order"  target="iframe" onclick="clearHeight();">הזמנת ציור</a></li>
+            <li><a href="contactc.html" target="iframe" onclick="clearHeight();">צור קשר</a></li>
+            <li><a href="faqc.html" target="iframe" onclick="clearHeight();">שאלות נפוצות</a></li>
         </ul>
  		
     </div>
@@ -42,40 +46,25 @@
                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9" data-size="large"></a>
                     </span>
     </div>
-    <div id="container">
-        <div id="transparent">
-            <div class="centerdiv">
-                <section>
-                    <h1>
-                        ברוכים הבאים</h1>
-                    <p>
-                        אני זהר אגמון, מצטיינת מגמה לאומנות פלסטית בבית הספר תלמה ילין בעלת ניסיון רב בדיוקנאות
-                        וציורי קיר. אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
-                    </p>
-                </section>
-                <br />
-                <section>
-                    <div style="margin: 0 auto; width: 75%;">
-                        <div>
-                            <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
-                            <span style="float: left" class="desctext">מציירת את אחת מהעבודותמציירת את עבודת הגמר המצטיינת במגמה הפלסטית בתיכון ׳תלמה ילין׳ לאומנויות</span>
-                        </div>
-                        <div style="margin-top: 50px; margin-bottom: 50px;">
-                            <img src="images/2.jpg" style="vertical-align: top;" class="im" />
-                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקריתבשדרות רוטשילד בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
-                        </div>
-                        <div>
-                            <p style="float: left; width: 100%; text-align: left;">
-                                <a href="gallery.html" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
-                            </p>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
+    <div id="container" style="width:100%;">
+    <frameset rows="100%">
+  <frameset cols="100%">
+
+      <iframe id="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0"  height="100%" width="100%"></iframe>
+
+  </frameset>
+</frameset>
     </div>
     <footer>
        Powered by lemon juice
     </footer>
+    
+    <script>
+   function prepFancyBox()
+    {
+            $('#iframe').contents().find(".gallery,a").fancybox({type:"iframe"});
+    }
+    </script>
+    
 </body>
 </html>
