--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" id="mainHtml">
 <head>
     <title>Zohar Agmon's Gallery</title>
+    <script type="text/javascript">
+        if (/http:\/\/(www\.)?zohargallery.omeriko9\.com/.test(document.referrer)) {
+            window.location = "http://zohargallery.com";
+        }
+    </script>
     <meta charset="utf-8">
     <meta name="description" content="Paintings work of Zohar Agmon">
     <meta property="og:title" content="Zohar Agmon's painting gallery" />
@@ -16,7 +21,7 @@
       <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
     <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
         media="screen" />
-
+        
 </head>
 <body id="mainBody">
     <div id="fb-root">
