--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script src="scripts/global.js" type="text/javascript"></script>
+        <script src="scripts/contact.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -19,6 +19,9 @@
                         צור קשר</h1>
                     <p>לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
                     </p>
+                </section>
+                <section>
+                    <div id="fb-root"></div>
                 </section>
             </div>
         </div>
