--- a/contact.html
+++ b/contact.html
@@ -6,26 +6,32 @@
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script src="scripts/contact.js" type="text/javascript"></script>
-
+    <script src="scripts/contact.js" type="text/javascript"></script>
 </head>
 <body>
-  
+    <div id="fb-root">
+    </div>
     <div id="container">
-        <div id="transparent" style="margin:0;">
+        <div id="transparent" style="margin: 0;">
             <div class="centerdiv">
-              <section style="padding-right: 20px;">
+                <section style="padding-right: 20px;">
                     <h1>
                         צור קשר</h1>
-                    <p>לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
+                    <p>
+                        לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
                     </p>
                 </section>
-                <section>
-                    <div id="fb-root"></div>
-                </section>
             </div>
+            <section>
+
+         <div class="fb-like-box" data-show-border="false" style="margin-top:30px;overflow:auto;text-align:center;display:block !important;height:550px;overflow:hidden;" data-href="https://www.facebook.com/zoharsgallery"
+                    data-width="650" data-colorscheme="light" data-show-faces="true" data-header="true"
+                    data-stream="true" data-show-border="true">
+                </div>
+            </section>
         </div>
+
+
     </div>
-    
 </body>
 </html>
